Crash on the World Properties > Preview #44556

Closed
opened 2015-04-30 10:48:10 +02:00 by filip mond · 9 comments

System Information
OS X 10.8.5 NVIDIA GeForce GTX 780M 4096 MB

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: 2.74 f553aba

Short description of error
When I click on "Preview" to open (display) panel, blender crash.
Screen_Shot_2015-04-30_at_10.36.01_copy.jpg

Exact steps for others to reproduce the error
If the "Preview" panel is already open in a document, but isn't displayed (because currently is displayed another properties like material or render properties), blender crash when I click the "World Properties" button of Properties window too.

With loading factory setting blender crashes in the same way.

**System Information** OS X 10.8.5 NVIDIA GeForce GTX 780M 4096 MB **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: 2.74 f553aba **Short description of error** When I click on "Preview" to open (display) panel, blender crash. ![Screen_Shot_2015-04-30_at_10.36.01_copy.jpg](https://archive.blender.org/developer/F168462/Screen_Shot_2015-04-30_at_10.36.01_copy.jpg) **Exact steps for others to reproduce the error** If the "Preview" panel is already open in a document, but isn't displayed (because currently is displayed another properties like material or render properties), blender crash when I click the "World Properties" button of Properties window too. With loading factory setting blender crashes in the same way.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @FilipMond

Added subscriber: @FilipMond
Dalai Felinto was assigned by Sergey Sharybin 2015-04-30 11:28:20 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by 4bcc7a2ec6

This issue was referenced by 4bcc7a2ec6bf6937778a2227c7f938c50a0fafe5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4bcc7a2ec6.

Closed by commit 4bcc7a2ec6.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@dfelinto, this is kinda really bad bug to have in master so i've committed NULL-pointer check for now. But surely it needs closer look about what's going on and probably make it nicer solution and check on other areas where this could happen.

@dfelinto, this is kinda really bad bug to have in master so i've committed NULL-pointer check for now. But surely it needs closer look about what's going on and probably make it nicer solution and check on other areas where this could happen.

This issue was referenced by 179fff94e8

This issue was referenced by 179fff94e8a1977af95fe30f98f1a2b81699089a
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44556
No description provided.